<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card1_in_signin"
        app:cardUseCompatPadding="true"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardCornerRadius="13dp"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout01"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/colorPrimaryDark"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:id="@+id/email_in_sign_in"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card2_in_signin"
        android:layout_below="@id/card1_in_signin"
        app:cardUseCompatPadding="true"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardCornerRadius="13dp"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout02"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"
                android:singleLine="true"
                android:id="@+id/password_in_signin"
                />
        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/card3_in_signin"
        android:layout_below="@id/card2_in_signin"
        app:cardUseCompatPadding="true"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardCornerRadius="15dp"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_signin"
            android:text="Sign in"
            android:layout_centerHorizontal="true"
            android:textColor="#fff"
            android:background="#000"
            android:fontFamily="sans-serif"
            />
    </android.support.v7.widget.CardView>
</RelativeLayout>